--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
-    "vue": "^3.5.22"
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-vue": "^10.5.1",
     "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.3"
   }
